# wit-interface

./: README.md
host-app/: Cargo.toml
host-app/src/: main.rs
kv-test/: Cargo.toml
kv-test/src/: bindings.rs
kv-test/wit/: world.wit
matrix-client/: Cargo.toml
matrix-client/src/: bindings.rs  lib.rs
matrix-client/wit/: world.wit
matrix-client/wit/wasi-acc/: world.wit
matrix-client/wit/wasi-accelerator/: world.wit
my-wasi-offload-project/: build_and_run.sh
my-wasi-offload-project/host-offload-provider/: Cargo.toml
my-wasi-offload-project/host-offload-provider/src/: bindings.rs  lib.rs
my-wasi-offload-project/host-offload-provider/wit/: world.wit
my-wasi-offload-project/matrix-client/: Cargo.toml
my-wasi-offload-project/matrix-client/src/: bindings.rs  lib.rs
my-wasi-offload-project/matrix-client/wit/: world.wit
my-wasi-offload-project/runner/: Cargo.toml
my-wasi-offload-project/runner/src/: main.rs
my-wasi-offload-project/wit/: host-offload.wit
polars-client/: Cargo.toml
polars-client/src/: bindings.rs  lib.rs
polars-client/wit/: world.wit
polars-client/wit/dataframe/: world.wit
wasm-module/: Cargo.toml
wasm-module/src/: main.rs
wit/: host-offload.wit
