[package]
name = "host-app"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = { version = "19.0", features = ["component-model"] } # Or latest
anyhow = "1.0"
# For matrix multiplication example
nalgebra = "0.32" 
# To generate host bindings from WIT
# We'll use wasmtime::component::bindgen! macro directly in code
