[package]
name = "dataframe"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.43.0", features = ["bitflags"] }

[package.metadata.component]
package = "my-org:dataframe-world" # Package name from client/wit/world.wit

[package.metadata.component.target]
path = "wit"
world = "client"

[package.metadata.component.target.dependencies]
"wasi:dataframe" = { path = "wit/dataframe" }
