[package]
name = "wasm-module"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Critical for Wasm components

[dependencies]
#will use wit-bindgen to generate bindings from the WIT file
wit-bindgen = { version = "0.20.0", features = ["macros"] } # Or latest
#for matrix data
nalgebra = { version = "0.32", default-features = false, features = ["alloc"] } # Use no_std features if possible

[package.metadata.component]
#configuring cargo-component
world = "offload-client" # Name of the world in WIT file
[package.metadata.component.target]
path = "../wit" 
