[package]
name = "host-offload-provider"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] # Important for Wasm components

[dependencies]
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }
nalgebra = "0.32"         # For matrix math (provider does the multiplication)
once_cell = "1.18"        # For static mutable state


[package.metadata.component]
package = "wasi-custom:host-offload"

[package.metadata.component.target]
path = "wit"
world = "provider"

