[package]
name = "matrix-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.20.0", features = ["macros"] }

[package.metadata.component]
package = "my-org:matrix-client-world" # Package name from client/wit/world.wit

[package.metadata.component.target]
path = "wit/world.wit"


[package.metadata.component.dependencies]
"wasi-custom:host-offload" = { path = "../wit/host-offload.wit" }
